# esi

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
benchmarks/: forgetting_benchmark.py
docs/: architecture.md
esi/: __init__.py  core.py
esi/backends/: __init__.py  mem0_backend.py  simple.py
examples/: quickstart.py
tests/: test_core.py
