[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esi-memory"
version = "0.1.0"
description = "Epistemic State Interface — your agent's memory should know what it forgot"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Tudor Ghetau", email = "tudor@example.com"}]
keywords = ["ai", "memory", "agents", "llm", "epistemic", "confidence", "freshness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "matplotlib>=3.5"]
benchmark = ["matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/GhetauTudor/esi"
Repository = "https://github.com/GhetauTudor/esi"
Issues = "https://github.com/GhetauTudor/esi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["esi*"]
